# pcl-ppl-detector2

./: LICENSE  README.md  build_opencv249.sh
PartsBasedDetector/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
PartsBasedDetector/cmake/: FindEigen.cmake
PartsBasedDetector/doc/: Doxyfile
PartsBasedDetector/doc/html/: Candidate_8hpp.html  Candidate_8hpp_source.html  DepthConsistency_8cpp.html  DepthConsistency_8hpp.html  DepthConsistency_8hpp_source.html  DistanceTransform_8hpp.html  DistanceTransform_8hpp_source.html  DynamicProgram_8cpp.html  DynamicProgram_8hpp.html  DynamicProgram_8hpp_source.html  FileStorageModel_8cpp.html  FileStorageModel_8hpp.html  FileStorageModel_8hpp_source.html  FourierConvolutionEngine_8cpp.html  FourierConvolutionEngine_8hpp.html  FourierConvolutionEngine_8hpp_source.html  HOGFeatures_8cpp.html  HOGFeatures_8hpp.html  HOGFeatures_8hpp_source.html  IConvolutionEngine_8hpp.html  IConvolutionEngine_8hpp_source.html  IFeatures_8hpp.html  IFeatures_8hpp_source.html  Math_8hpp.html  Math_8hpp_source.html  MatlabIOModel_8cpp.html  MatlabIOModel_8hpp.html  MatlabIOModel_8hpp_source.html  Metrics_8hpp.html  Metrics_8hpp_source.html  ModelTransfer_8cpp.html  Model_8hpp.html  Model_8hpp_source.html  PartsBasedDetector_8cpp.html  PartsBasedDetector_8hpp.html  PartsBasedDetector_8hpp_source.html  Parts_8hpp.html  Parts_8hpp_source.html  PointCloudClusterer_8h.html  PointCloudClusterer_8h_source.html  (+80 more)
PartsBasedDetector/doc/latex/: Candidate_8hpp.tex  DepthConsistency_8cpp.tex  DepthConsistency_8hpp.tex  DistanceTransform_8hpp.tex  DynamicProgram_8cpp.tex  DynamicProgram_8hpp.tex  FileStorageModel_8cpp.tex  FileStorageModel_8hpp.tex  FourierConvolutionEngine_8cpp.tex  FourierConvolutionEngine_8hpp.tex  HOGFeatures_8cpp.tex  HOGFeatures_8hpp.tex  IConvolutionEngine_8hpp.tex  IFeatures_8hpp.tex  Math_8hpp.tex  MatlabIOModel_8cpp.tex  MatlabIOModel_8hpp.tex  Metrics_8hpp.tex  ModelTransfer_8cpp.tex  Model_8hpp.tex  PartsBasedDetector_8cpp.tex  PartsBasedDetector_8hpp.tex  Parts_8hpp.tex  PointCloudClusterer_8h.tex  PointCloudClusterer_8hpp.tex  Rect3_8hpp.tex  SearchSpacePruning_8cpp.tex  SearchSpacePruning_8hpp.tex  SpatialConvolutionEngine_8cpp.tex  SpatialConvolutionEngine_8hpp.tex  StereoCameraModel_8cpp.tex  StereoCameraModel_8hpp.tex  Visualize_8cpp.tex  Visualize_8hpp.tex  classCandidate.tex  classComponentPart.tex  classDepthConsistency.tex  classDistanceTransform.tex  classDynamicProgram.tex  classFeature.tex  (+26 more)
PartsBasedDetector/launch/: detect.launch  detect.launch~
PartsBasedDetector/msg/: Candidate.msg  Candidate.msg~  CandidateArray.msg  CandidateArray.msg~  Part.msg~
PartsBasedDetector/ros/: Messages.cpp  Node.cpp  Node.hpp
PartsBasedDetector/src/: Visualize.cpp
ground_based_detector/: CMakeLists.txt
ground_based_detector/launch/: ground_based_detector.launch
ground_based_detector/msg/: human.msg  humanArray.msg  humanArray.msg~
ground_based_detector/src/: ground_based_detector.cpp
ground_estimator/: CMakeLists.txt  package.xml
ground_estimator/launch/: ground_estimator.launch
ground_estimator/src/: ground_estimator.cpp
human_json_outputer/: CMakeLists.txt  CMakeLists.txt~  count_results  count_results2  package.xml  package.xml~  plot_results
human_json_outputer/include/: JSONPointPrinter.hpp
human_json_outputer/launch/: human_json_outputer.launch  human_json_outputer_redo.launch  human_json_outputer_redo.launch~  human_markers_publisher.launch~
human_json_outputer/ppl_detection_results/: JSONResultLoader.py  ResultLoader.py  ResultPlotter.py  ResultPlotter.py~
human_json_outputer/src/: human_json_outputer.cpp
human_markers_publisher/: CMakeLists.txt  package.xml
human_markers_publisher/launch/: human_markers_publisher.launch
human_markers_publisher/src/: human_markers_publisher.cpp
pcl_ppl_detector2_launcher/: CMakeLists.txt  package.xml
pcl_ppl_detector2_launcher/launch/: pcl_ppl_detector2.launch  pcl_ppl_detector2.launch~  pcl_ppl_detector2_analysis.launch
region_normalizer/: CMakeLists.txt  package.xml
region_normalizer/include/: Histogram.h  RegionNormalizer.h
region_normalizer/include/impl/: Histogram.hpp  RegionNormalizer.hpp
region_normalizer/launch/: region_normalizer.launch
region_normalizer/src/: region_normalizer.cpp
upperbody_cropper/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
upperbody_cropper/launch/: upperbody_cropper.launch
upperbody_cropper/src/: upperbody_cropper.cpp
upperbody_detector/: CMakeLists.txt  package.xml
upperbody_detector/launch/: upperbody_detector.launch
upperbody_detector/msg/: upperbody.msg  upperbodyArray.msg
upperbody_detector/src/: upperbody_detector.cpp
upperbody_dpm_filter/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
upperbody_dpm_filter/include/: Pixel.h  UpperBodyDPMFilter.h
upperbody_dpm_filter/include/impl/: UpperBodyDPMFilter.hpp
upperbody_dpm_filter/launch/: upperbody_dpm_filter.launch  upperbody_dpm_filter.launch~
upperbody_dpm_filter/src/: upperbody_dpm_filter.cpp
upperbody_filter/: CMakeLists.txt  package.xml
upperbody_filter/include/: Pixel.h  UpperBodyDetector.h
upperbody_filter/include/impl/: UpperBodyDetector.hpp
upperbody_filter/launch/: upperbody_filter.launch
upperbody_filter/src/: upperbody_filter.cpp  upperbody_filter_original.cpp
