<?xml version="1.0"?>
<package>
  <name>human_markers_publisher</name>
  <version>1.0.0</version>
  <description>people detection node</description>
  <maintainer email="jonathan.gingras.1@gmail.com">jonathan</maintainer>
  <license>wtf</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>

  </export>
</package>
