<package>
	<name>pcl_ppl_detector2_launcher</name>
  <version>1.0.0</version>
  <description>people detection node</description>
  <maintainer email="jonathan.gingras.1@gmail.com">jonathan</maintainer>
  <license>wtf</license>

  <buildtool_depend>catkin</buildtool_depend>
	<export>
	</export>
</package>